plugins {
    id 'java'
}

group 'camp.nextstep.edu'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation 'com.github.woowacourse-projects:mission-utils:1.1.0'
    testImplementation 'junit:junit:4.13.1'
    testImplementation 'org.mockito:mockito-junit-jupiter:3.9.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

test {
    useJUnitPlatform()
}
